# Ros_project

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_robot_model_final.yaml  mecanum_controllers.yaml
launch/: control.launch  display.launch  gazebo.launch
meshes/: arm_link_1.STL  arm_link_2.STL  base_link.STL  camera_link.STL  imu_link.STL  l1_link.STL  l2_link.STL  lidar_link.STL  r1_link.STL  r2_link.STL
rviz/: mecanum.rviz
scripts/: arm_control.py  arm_control_keyboard.py  imu.py  mecanum_control.py
urdf/: robot_model_final.csv  robot_model_final.urdf
worlds/: create_world.world
worlds/edit_world/: model.config  model.sdf
